# bucket-sort-viz

./: BRICK_PROGRESS.md  pyproject.toml
src/bucket_sort_viz/: __init__.py  __main__.py  config.py  main.py  presets.py
src/bucket_sort_viz/model/: __init__.py  bucket_sort.py  step.py
src/bucket_sort_viz/view/: __init__.py  code_panel.py  effects.py  elements.py  renderer.py
tests/: conftest.py  test_bucket_sort.py  test_presets.py  test_step_recording.py
