[project]
name = "bucket-sort-viz"
version = "0.1.0"
description = "Animated Bucket Sort visualizer for visual learning — Lightning Labs style"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
keywords = ["sorting", "algorithm", "visualization", "education", "bucket-sort"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Visualization",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "pygame>=2.5.0",
]

[project.scripts]
bucket-sort-viz = "bucket_sort_viz.main:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bucket_sort_viz"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
